# KG_embeddings

./: .gitignore  .venv  CONFIG_UPDATE_SUMMARY.md  GPU_READY.md  GPU_TRAINING.md  README.md  STABILITY_README.md  TESTING.md  TESTING_QUICKSTART.md  TEST_REPORT.md  TRAINING_ISSUES.md  data  evaluate.py  evaluate_stability.py  kgexplainer_requirements.txt  main.py  pyproject.toml  run_all_tests.sh  run_with_mem_fix.sh  test_context_pooling.py  test_stability.py  train.py
KGExplainer/: distill.py  evaluator.py  explain.py  graph.py
configs/: fb15k237_med.yaml  wn18rr_med.yaml
configs/experiment/: config_context_pooling.yaml
configs/fb15k237/: complex_d10.yaml  complex_d20.yaml  complex_d40.yaml  complex_d80.yaml  complex_med.yaml  complex_med_mi.yaml  complex_med_rscf.yaml  complex_med_rscf_mi.yaml  distmult_d10.yaml  distmult_d20.yaml  distmult_d40.yaml  distmult_d80.yaml  distmult_med.yaml  distmult_med_mi.yaml  distmult_med_rscf.yaml  distmult_med_rscf_mi.yaml  eval.yaml  med_distMult.yaml  med_pairre.yaml  med_rotatE.yaml  pairre_d10.yaml  pairre_d20.yaml  pairre_d40.yaml  pairre_d80.yaml  pairre_med.yaml  pairre_med_mi.yaml  pairre_med_paper.yaml  pairre_med_rscf.yaml  pairre_med_rscf_mi.yaml  roate_med_paper.yaml  rotate_d10.yaml  rotate_d160.yaml  rotate_d20.yaml  rotate_d40.yaml  rotate_d80.yaml  rotate_med.yaml  rotate_med_mi.yaml  rotate_med_rscf.yaml  rotate_med_rscf_mi.yaml  transe_d10.yaml  (+16 more)
configs/final/: ALL_DEVICE_FIXES.md  COMPLETE_SETUP.md  FIXES_APPLIED.md  FRAGMENTATION_FIX.md  MEMORY_ISSUE_EXPLAINED.md  MI_DEVICE_FIX.md  QUICK_FIX.md  README.md  SOLUTION_SUMMARY.md  TUNING_GUIDE.md
configs/wn18rr/: complex_d10.yaml  complex_d20.yaml  complex_d40.yaml  complex_d80.yaml  complex_med.yaml  complex_med_mi.yaml  complex_med_rscf.yaml  complex_med_rscf_mi.yaml  distmult_d10.yaml  distmult_d20.yaml  distmult_d40.yaml  distmult_d80.yaml  distmult_med.yaml  distmult_med_mi.yaml  distmult_med_rscf.yaml  distmult_med_rscf_mi.yaml  pairre_d10.yaml  pairre_d20.yaml  pairre_d40.yaml  pairre_d80.yaml  pairre_med.yaml  pairre_med_mi.yaml  pairre_med_paper.yaml  pairre_med_rscf.yaml  pairre_med_rscf_mi.yaml  rotate_d10.yaml  rotate_d160.yaml  rotate_d20.yaml  rotate_d40.yaml  rotate_d80.yaml  rotate_med.yaml  rotate_med_mi.yaml  rotate_med_paper.yaml  rotate_med_rscf.yaml  rotate_med_rscf_mi.yaml  transe_d10.yaml  (+17 more)
dataset/: cnf_generator.py  fb15k237.py  kg_dataset.py  sampling.py  utils.py  wn18rr.py
eval/: kgc_eval.py  stability_metrics.py
evaluation/: inductive.py
med/: med_wrapper.py
models/: __init__.py  compgcn_cp.py  complex_.py  context_pooling.py  distmult.py  kg_model.py  mi.py  mi_wrapper.py  pairre.py  registry.py  rotate.py  rotatev2.py  rscf.py  rscf_wrapper.py  train_with_mi.py  transe.py  transh.py
runner/: checkpoint.py  config.py  logger.py  optim.py  trainer.py
scripts/: README.md  collect_stability_results.py  quick_test.sh  run_complex_all.sh  run_distmult_all.sh  run_fb15k237_all.sh  run_fb15k237_med_rotate.sh  run_final_all.sh  run_final_mi.sh  run_final_rscf.sh  run_final_rscf_mi.sh  run_kgexplainer_all.sh  run_med_combinations.sh  run_pairre_all.sh  run_rotate_all.sh  run_stability_evaluation.sh  run_stability_evaluation_essential.sh  run_transe_all.sh  run_transh_all.sh  run_wn18rr_all.sh  run_wn18rr_med.sh  test_med_rscf.py  test_rscf.py  verify_med_combinations.sh
tests/: smoke_test_dataset_io.py  smoke_test_eval.py  smoke_test_med.py  smoke_test_mi.py  smoke_test_models.py  smoke_test_rscf.py  test_cnf_generator.py  test_compgcn_cp.py  test_end_to_end_minimal.py  test_gpu_ready.py  test_hf_data_loading.py  test_sampling.py  test_validation_speed.py  test_wrappers_integration.py
tools/: plot_logs.py
(+73 files in other folders)
